--- a/docs/writeup.tex
+++ b/docs/writeup.tex
@@ -42,14 +42,13 @@ http://www.oxfordjournals.org/our_journals/bioinformatics/
 
 \begin{document} \firstpage{1}
 
-\title[In a fit of pique]{Analyzing high coverage microbial ChIP-seq
-data with Pique} \author[Neches
-\textit{et~al}]{R.Y.~Neches\,$^{1,3}$\footnote{to whom correspondence
-should be addressed}, E.G.~Wilbanks\,$^{1,3}$ and
+\title[In a fit of pique]{Analyzing microbial ChIP-Seq data with Pique}
+\author[Neches \textit{et~al}]{R.Y.~Neches\,$^{1,3}$\footnote{to whom
+correspondence should be addressed}, E.G.~Wilbanks\,$^{1,3}$ and
 M.T.~Facciotti\,$^{2,3}$ \address{$^{1}$Microbiology Graduate Group,
 University of California, Davis.\\ $^{2}$Department of Biomedical
 Engineering, University of California, Davis.\\$^{3}$Genome Center,
-University of California, Davis.}
+University of California, Davis.}}
 
 \history{Received on XXXXX; revised on XXXXX; accepted on XXXXX}
 
@@ -66,147 +65,181 @@ University of California, Davis.}
 
 \begin{abstract} \section{Motivation:}
 
-Most ChIP-Seq peak finders are designed to detect protein-DNA binding
-events in eukaryotic datasets. To make cost-effective use of current
-sequencing capacity, the peak finders must be cleverly optimized to work
-with sparse-coverage data, and must take into account the effect of
-chromatin structure on the variation in background coverage. While
-numerous effective peak finders have been developed for eukaryotic data,
-these algorithmic approaches can be suprisingly error prone when run on
-high-coverage bacterial and archaeal ChIP-Seq datasets.
+\noindent Most ChIP-Seq peak finders are designed to detect evidence of
+protein-DNA binding events in eukaryotic datasets. To make
+cost-effective use of current sequencing capacity, the peak finders must
+be cleverly optimized to work with sparse-coverage data, and must take
+into account the effect of chromatin structure on the variation in
+background coverage. While numerous effective peak finders have been
+developed for eukaryotic data, these algorithmic approaches can be
+suprisingly error prone when run on high-coverage bacterial and archaeal
+ChIP-Seq datasets.
 
 % Why not? Examples, evidence, hypothesis.
 
-\section{Results:} Fortunately, many of the statistical challenges for
-peak detection inherent in eukaryotic ChIP-seq data are not present in
+\section{Results:}
+
+\noindent Fortunately, many of the statistical challenges for peak
+detection inherent in eukaryotic ChIP-seq data are not present in
 bacterial and archaeal datasets; this is due in part to higher genome
 coverage -- typically in inverse proportion to genome size -- and in
 part to the absence of non-random coverage variation due to highly
 structured chromatin.  In response, we have developed Pique, a
 conceptually simple, easy to run ChIP-Seq peak finding pipeline for
-bacterial and archaeal ChIP-Seq data.  The software is cross-platform,
-implemented in Python.  Output is easily imported into the Gaggle Genome
-Browser for manual curation of peaks and the exploration of the dataset
-in the context of Gaggle-enabled resources.
+bacterial and archaeal ChIP-Seq data. The software is cross-platform and
+Open Source, and based on Open Source dependencies. Output is easily
+imported into the Gaggle Genome Browser for manual curation of peaks and
+the exploration of the dataset in the context of Gaggle-enabled
+resources.
 
-\section{Availability:} RUSSELL - The software is available under the
-BSD-3 license at http://github.com/ryneches/pique.
+\section{Availability:}
+
+\noindent The software is available under the BSD-3 license at
+
+\href{http://github.com/ryneches/pique}{http://github.com/ryneches/pique
+}.
+
+\noindent A tutorial and test data are included with the documentation.
 
 \section{Contact:} \href{ryneches@ucdavis.edu}{ryneches@ucdavis.edu}
 
 \end{abstract}
 
-\section{Introduction} Next generation sequencing coupled with chromatin
+\section{Introduction}
+
+\noindent Next generation sequencing coupled with chromatin
 immunoprecipitation (ChIP-Seq) is revolutionizing our abilty to
 genomically map protein-DNA associations for a wide variety of proteins.
 The growing popularity of ChIP-Seq has spurred the development of over
-30 peak picking algorithms (for a nearly completely list see (REF1)). The
-relative performance represetative peak detection algorithms on
-eukatyoric data and methods to assess performance have been recently
-reviewed by several authors (REF1,2,3,4,5).  To make most cost-effective use
-of current sequencing abilities the peak picking methods have employed a
-number of sophisticated strategies to detect peaks in the typically
-sparcely covered eukaryotic datasets for which they are designed.
+30 peak picking algorithms (for a nearly completely list see
+\cite{wilbanks}). The relative performance represetative peak detection
+algorithms on eukatyoric data and methods to assess performance have
+been recently reviewed by several authors \cite{Pepke, Laajala_review,
+too_many_peak_callers, peakranger, peak_benchmark}.  To make most
+cost-effective use of current sequencing abilities the peak picking
+methods have employed a number of sophisticated strategies to detect
+peaks in the typically sparcely covered eukaryotic datasets for which
+they are designed.
 
 While ChIP-Seq has been predominantly used to interrogate protein-DNA
 interactions in eukaryotic systems there are clear advantages to
 adopting this technology for studying microbial systems that are largely
-associated with the relatively small sizes of microbial genomes (e.g.
-the E. coli genome is ~2000 smaller than the human genome).
-Surprisingly, however, existing peak detection algorithms designed for
-eukaryotic systems have, in our hands, been error prone with microbial
-ChIP-Seq data.  To our knowledge, only one other peak finding package,
-CSDeconv (REF6) has been explicitly developed for finding peaks in
-microbial ChIP-Seq data.  This MATLAB package performs well with
-microbial ChIP-Seq data but it's broad applicaiton is limited by the
-requirement for the proprietary software upon which it is built,
-slow performance, and lack of integrated peak curation. 
+associated with the relatively small sizes of microbial genomes (the
+genome of {\em E. coli} is $\approx$2000 times smaller than the human
+genome). Eukaryotic ChIP-Seq necessarily involves more challenging
+biochemical and statistical approaches than microbial ChIP-Seq, and so
+we were surprised to find that software that works well in eukaryotic
+systems does not perform adequately when presented with less challenging
+data.
+
+To our knowledge, only one other peak finding package, CSDeconv
+\cite{CSDeconv} has been explicitly developed for finding peaks in
+microbial ChIP-Seq data. This MATLAB package successfully finds peaks in
+microbial ChIP-Seq data, but its application is limited by its
+dependency on costly proprietary software, very slow performance, lack
+of support for manual curation, and high false negative rate.
+
 Herein we describe Pique, a conceptually simple, Python-based peak
 finding package that enables easy and rapid peak finding in bacterial
 and archaeal ChIP-Seq datasets.  The output is easily imported into the
-Gaggle Genome Browser (REF7) to enable rapid manual peak list curation
-and analysis of ChIP-Seq data in the context of other Gaggle-enabled
-(REF8) resources.
+Gaggle Genome Browser \cite{ggb} to enable rapid manual curation and
+analysis of ChIP-Seq data in the context of other Gaggle-enabled
+\cite{gaggle} resources (browsers are that can import GFF data also
+supported).
 
-\section{Approach} ChIP-seq in bacteria and archaea yields coverage
-several orders of magnitude larger than in eukaryotic systems.  This
-generates data with near-continuous signal across the microbial
-chromosome rather than the otherwise sparse coverage typically present
-in eukaryotic ChIP-Seq data.  This elemenatry feature of microbial
-ChIP-Seq data allows for greater simplicity of design through the use
-several standard algorithms and design principles from signal
-processing.
+Pique is also designed for use in systems have genomic complexities such
+as IS elements, gene dosage polymorphisms and accessory genomes that
+cause variations in sequence coverage unrelated to ChIP, or in cases
+where the organism under study is not identical to the reference genome.
+The resulting enrichment ``pedestals'' and ``holes'' can be very
+problematic for detecting peaks and calculating enrichment levels. Pique
+allows the user to optionally supply a map of these features as a GFF
+file, and the software will automatically perform a segmented analysis.
+(I LIKE!)
 
-% design paradigm
+\section{Approach}
+
+\noindent ChIP-Seq in bacteria and archaea yields coverage several
+orders of magnitude larger than in eukaryotic systems.  This generates
+data with near-continuous signal across the microbial chromosome rather
+than the sparse coverage typically present in eukaryotic ChIP-Seq data.
+This feature of microbial ChIP-Seq data permits simpler, faster
+algorithms to be used. We have based our algorithm on classic noise
+reduction techniques from signal processing.
+
+Finally, given the importance of manual curation and settings
+optimization, Pique has integrated curation support through the Gaggle
+Genome Browser. This permits convenient interactive curation of the peak
+list and analysis of the ChIP-Seq data in the context of other
+Gaggle-enabled resources. Interactive curation of a microbial ChIP-Seq
+data set can typically be completed in a few minutes.
 
 \begin{methods} \section{Methods}
 
-Prior to running Pique, 40-bp Illumina (Solexa) reads sould be quality
-filtered, quality trimmed, and aligned to a reference genome using a
-favorite short-read sequence aligner.
+\noindent Prior to running Pique, 40-bp Illumina (Solexa) reads should
+be quality filtered, quality trimmed, and aligned to a reference genome
+using the user's preferred short-read sequence aligner. Pique requires a
+BAM file as input \cite{sam_format}. We suggest using all contigs of the
+reference genome as the mapping target, but the user may, if desired,
+proceed with processing one contig at a time.
 
-Reads mapped in the forward and reverse orientation are separated, and
-used to calculate distinct coverage tracks. (IS THIS STILL FOR REAL?)
+The user may optionally supply a map of coverage features. Pique
+supports two modes; analysis regions and exclusion regions. By default,
+Pique treats each contig as a single analysis regions, but the user may
+designate regions within a contig for separate analysis. This is useful
+where a gene dosage polymorphism has systematically altered the coverage
+level in a large region. Exclusion regions are simply masked out of
+their respective analysis regions, and are useful for removing coverage
+variation due to repetitive DNA.
+
+The user launches the primary analysis stage by providing alignment an
+file for the ChIP data, an alignment file for the control data, and an
+optional coverage feature map. The primary analysis proceeds thusly :
 
 \begin{itemize}
 
-\item Raw data is normalized with respect to the background. The user
-selects one or more regions which are representative of the un-enriched
-background. Resequenced genomes often have coverage artifacts caused by
-features such as repetitive regions and gene dosage variation. For this
-reason, we advise the use of curated background regions. This operation
-is carried out by \texttt{piquify.py}.
+\item The alignment files are digested, and the analysis regions are
+initialized. If a coverage feature map provided, the analysis regions
+are separated and the exclusion regions applied.
 
-\item A mask is applied to the ChIP track to remove regions with
-ambiguous read mapping. For example, it is impossible to map reads to
-unique loci in highly repetitive or palindromic regions, such as IS
-elements. As a result, the coverage is impossible to measure
-unambiguously, and the regions must be excluded from downstream
-analysis. (\texttt{pique.py})
+\item The coverage noise threshold is measured in both the ChIP and
+control alignments by adaptive simulated annealing of the cutoff
+threshold with respect to the peak recovery rate.
 
-\item The ``DC'' component is removed using linear detrending
-(scipy.detrend). This removes effects due to coverage variation features
-larger than about 100Kb. (\texttt{pique.py})
+\item In each analysis region, the ``DC'' component is removed using
+linear detrending. This removes effects due to coverage variation
+features larger than about 100Kb.
 
 \item High-$k$ noise in coverage is removed using a Wiener-Kolmogorov
 filter. The filter delay $\alpha$ is chosen to approximate to the
-expected footprint size of the targeted protein. (\texttt{pique.py})
+expected footprint size of the targeted protein. The choice of filter
+implies some specific assumptions about the nature of the coverage
+noise. The Wiener-Kolmogorov filter was the first and simplest
+statistical signal filter, first published by Norbert Wiener in 1949,
+and independently derived in discrete-time form by Andrey Kolmogorov in
+1941. The approach assumes the existence of two inputs; a ``true''
+signal, and a noise source. Both are assumed to be stationary stochastic
+processes combined additively. The choice of this filter minimizes the
+assumptions.
 
-\item A coverage amplitude cutoff calculated from the detrended
-background track such that any given locus is equally likely to be above
-or below the cutoff. Enrichment features are defined with respect to
-this coverage level (\texttt{pique.py})
-
-\item A sliding window moving average is used to identify regions whose
+\item A sliding window average is used to identify regions whose
 coverage level deviates from the background. Peaks usually contain gaps
-in coverage that with widths on the order of the experimentally selected
-fragment size; the window width is chosen to correspond to this size.
-(\texttt{pique.py})
+in coverage on the order of the experimentally selected fragment size;
+the window width is chosen to correspond to this size. This yield simple
+rectangular envelopes around putative regions of enrichment.
 
-
-% FIXME : Lizzy needs to verify that this is indeed the case
-
-\end{itemize}
-
-These steps yield simple rectangular envelopes around putative regions
-of enrichment. To determine if these enriched regions correspond to
-binding events, we apply a very simple statistical model :
-
-\begin{itemize}
-
-\item Coordinates of enriched regions in a peak are offset between
-strands, with the forward strand enriched upstream of the reverse
-strand. The first condition of the model is that the envelops must be
-overlapping rectangles; the end coordinate of the forward strand
-envelope must fall within the reverse strand envelope, and the start
-coordinate of the reverse strand envelope must fall within the forward
-strand envelope.
-
-\item Enrichment that are thought to represent binding events produce a
-characteristic shape envelope, which we model using a sum over set of
-Gaussians.
+\item To determine if a putative enriched region corresponds to a
+binding event, we require that the stop coordinate of the forward strand
+enrichment envelope must fall between the coordinates of the reverse
+strand enrichment envelope, and that the start coordinate of the reverse
+strand enrichment envelope fall between the coordinates of the forward
+strand enrichment envelope. (We call this the overlap criterion.)
 
 \end{itemize}
+
+% FIXME : The overlap criterion is a very crude version of the %
+heuristic models other peak callers user. We should say something % here
+about these models, and why decided not to use them.
 
 \end{methods}
 
@@ -219,39 +252,36 @@ envelope}\label{fig:01} \end{figure}
 %\centerline{\includegraphics{fig02.eps}} \caption{GAGGLE GENOME
 BROWSER}\label{fig:02} \end{figure} \section{Discussion}
 
-If a putative peak passes all of the tests above, Pique concludes that
-the peak ``looks'' like a peak. To make sure that we are not finding
-horsies by gazing at clouds, we also require that the integral of the
-coverage in the raw data within the putative peak region exceeds the
-integral of the coverage in the background by a margin set by the user.
-(Other tests for statistical significance may also work, be more shiny,
-et cetera. For example, Monte Carlo simulations of random subsamples of
-the ChIP track and the background track until a coalescent is found. YES
-- WHAT/HOW IS THE CURRENT BG SELECTED?
+\noindent If a putative peak passes all of the tests above, Pique
+concludes that the peak ``looks'' like a peak. To make sure that we are
+not finding horsies by gazing at clouds (HUMM. . . ), we also require
+that the integral of the coverage in the raw data within the putative
+peak region exceeds the integral of the coverage in the background by a
+margin set by the user. (Other tests for statistical significance may
+also work, be more shiny, et cetera. For example, Monte Carlo
+simulations of random subsamples of the ChIP track and the background
+track until a coalescent is found. That would be fun!
 
 
-\section{Conclusion} The choice of filter implies some specific
-assumptions about the nature of the coverage noise. The
-Wiener-Kolmogorov filter was the first and simplest statistical signal
-filter, first published by Norbert Wiener in 1949, and independently
-derived in discrete-time form by Andrey Kolmogorov in 1941. (SOME OF
-THIS COULD PERHAPS GO ABOVE?) The approach assumes the existence of two
-inputs; a ``true'' signal, and a noise source. Both are assumed to be
-stationary stochastic processes combined additively. We note that Pique
-should also work well with eukaryotic datasets provided they are
-gathered with greater coverage than has been previously reported.
+\section{Conclusion}
 
-NEED SOME SUMMARY SHOWING THAT THE PIQUE WORKS
+We note that Pique should also work well with eukaryotic datasets
+provided they are gathered with greater coverage than has been
+previously reported.
 
-NEED SOME RATIONALE FOR SELECTION OF FILTERS
+NEED SOME SUMMARY SHOWING THAT THE PIQUE WORKS - THIS COULD BE A QUICK
+PARAGRAPH SAYING HOW MANY PEAKS WE GET FROM THE BROAD DATA.
 
-\section*{Acknowledgement} \paragraph{Funding\textcolon} This project
-was funded by UC Davis startup funds to MTF, NSF graduate fellowship
-AWARD NUMBER to EGW and DARPA AWARD NUMBER TO RN.
+ALMOST DONE!
 
-\bibliographystyle{natbib} \bibliographystyle{achemnat}
-\bibliographystyle{plainnat} \bibliographystyle{abbrv}
-\bibliographystyle{bioinformatics}
+\section*{Acknowledgement} \paragraph{Funding\textcolon}
+
+This project was funded by UC Davis startup funds to MTF, NSF graduate
+fellowship AWARD NUMBER to EGW and DARPA AWARD NUMBER TO RN.
+
+%\bibliographystyle{natbib} %\bibliographystyle{achemnat}
+%\bibliographystyle{plainnat} %\bibliographystyle{abbrv}
+%\bibliographystyle{bioinformatics}
 
 \bibliographystyle{plain}
 
